[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "pixel-font-knife"
version = "0.0.20"
description = "A set of pixel font utilities"
readme = "README.md"
license = "MIT"
authors = [
    { name = "TakWolf" },
]
maintainers = [
    { name = "TakWolf" },
]
keywords = ["font", "pixel"]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pypng>=0.20220715.0",
    "unidata-blocks>=0.0.23",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.urls]
Homepage = "https://github.com/TakWolf/pixel-font-knife"
Source = "https://github.com/TakWolf/pixel-font-knife"
Issues = "https://github.com/TakWolf/pixel-font-knife/issues"
